--- a/zadaca_01_-_CSS.css
+++ b/zadaca_01_-_CSS.css
@@ -21,6 +21,7 @@ footer{
 li{
         display: inline-block;
         padding: 10px;
+        background-color: rgb(158, 238, 161);
     }
 
 .fotografije{
@@ -42,3 +43,46 @@ input, textarea{
 section.klasasekcije{
     text-align: center;
 }
+
+
+.menu_button {
+    background: rgb(50, 122, 255);
+    color: rgb(238, 81, 81);
+    font-size: 16px;
+    border: none;
+    }
+  
+    img.menu_button{
+      width: 50px;
+    }
+  
+  .drop_menu {
+    position: relative;
+    display: inline-block;
+    }
+  
+  .drop_menu-content {
+    display: none;
+    position: relative;
+    background-color: rgb(158, 238, 161);
+    }
+  
+  .drop_menu-content a {
+    color: black;
+    text-decoration: none;
+    display: block;
+    background-color: rgb(158, 238, 161) ;
+  }
+  
+  .drop_menu-content a:hover {
+      background-color: rgb(221, 221, 221);
+  }
+  
+  .drop_menu:hover .drop_menu-content {
+      display: block;
+  }
+  
+  .drop_menu:hover .menu_button {
+      background-color: rgb(158, 238, 161)
+  }
+  
